# pacman-mirrors

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.tx/: config
conf/: pacman-mirrors.conf
data/docs/: index.md
data/etc/: pacman-mirrors.conf
data/locale/: pacman_mirrors.pot
data/locale/az_AZ/LC_MESSAGES/: pacman_mirrors.po
data/locale/ca/LC_MESSAGES/: pacman_mirrors.po
data/locale/ca@valencia/LC_MESSAGES/: pacman_mirrors.po
data/locale/de/LC_MESSAGES/: pacman_mirrors.po
data/locale/es_ES/LC_MESSAGES/: pacman_mirrors.po
data/locale/et/LC_MESSAGES/: pacman_mirrors.po
data/locale/fr/LC_MESSAGES/: pacman_mirrors.po
data/locale/he/LC_MESSAGES/: pacman_mirrors.po
data/man/: pacman-mirrors.8.html
data/share/: status.json
docs/: index.md
locale/: pacman_mirrors.pot
locale/ar/LC_MESSAGES/: pacman_mirrors.po
locale/az_AZ/LC_MESSAGES/: pacman_mirrors.po
locale/be/LC_MESSAGES/: pacman_mirrors.po
locale/cs/LC_MESSAGES/: pacman_mirrors.po
locale/eo/LC_MESSAGES/: pacman_mirrors.po
locale/es_AR/LC_MESSAGES/: pacman_mirrors.po
locale/fa/LC_MESSAGES/: pacman_mirrors.po
locale/fi/LC_MESSAGES/: pacman_mirrors.po
locale/fr/LC_MESSAGES/: pacman_mirrors.po
locale/gl_ES/LC_MESSAGES/: pacman_mirrors.po
locale/hi/LC_MESSAGES/: pacman_mirrors.po
locale/ko/LC_MESSAGES/: pacman_mirrors.po
locale/lt/LC_MESSAGES/: pacman_mirrors.po
locale/nl/LC_MESSAGES/: pacman_mirrors.po
locale/or/LC_MESSAGES/: pacman_mirrors.po
locale/pt_PT/LC_MESSAGES/: pacman_mirrors.po
locale/ru_RU/LC_MESSAGES/: pacman_mirrors.po
locale/sk/LC_MESSAGES/: pacman_mirrors.po
locale/sk_SK/LC_MESSAGES/: pacman_mirrors.po
locale/sq/LC_MESSAGES/: pacman_mirrors.po
locale/sv/LC_MESSAGES/: pacman_mirrors.po
locale/uk/LC_MESSAGES/: pacman_mirrors.po
locale/zh_CN/LC_MESSAGES/: pacman_mirrors.po
locale/zh_TW/LC_MESSAGES/: pacman_mirrors.po
man/: pacman-mirrors.8  pacman-mirrors.8.html
pacman_mirrors/: __init__.py  pacman_mirrors.py
pacman_mirrors/api/: api_handler.py  apifn.py
pacman_mirrors/builder/: builder.py  common.py  fasttrack.py  interactive.py  pool_builder.py
pacman_mirrors/config/: configuration.py
pacman_mirrors/constants/: timezones.py  txt.py
pacman_mirrors/dialogs/: consoleui.py  graphicalui.py
pacman_mirrors/functions/: cliFn.py  configFn.py  config_setup.py  consoleFn.py  conversion.py  convertFn.py  countryFn.py  customFn.py  defaultFn.py  fileFn.py  filterFn.py  filter_mirror_pool_functions.py  filter_mirror_status_functions.py  httpFn.py  jsonFn.py  mirror_status.py  outputFn.py  pools.py  printFn.py  sortMirrorFn.py  testMirrorAsyncFn.py  testMirrorFn.py  util.py  validFn.py
pacman_mirrors/mirrors/: mirror.py
pacman_mirrors/translation/: i18n.py
share/: mirrors.json  status.json
site/: 404.html  index.html  installation.html  search.html  sitemap.xml  usage.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: README.md  mock_configuration.py  test_command_line_parse.py  test_commands.py  test_default_config.py  test_for_window_manager.py  test_httpfn.py  test_pacman_mirrors.py
(+12 files in other folders)
