[tool.poetry]
name = "pacman_mirrors"
version = "4.23.3"
description = "Mirror provider for Manjaro Linux."
authors = ["Roland Singer, Esclapion, Philip Müller, Ramon Buldó, Hugo Posnic, Frede Hundewadt"]
readme = "README.md"
license = "LICENSE.txt"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End User/Desktop',
    'License :: OSI Approved :: GPL3 License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
    'Environment :: Console'
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
npyscreen = "^4.10.5"

[tool.poetry.scripts]
pacman-mirrors = "pacman_mirrors.pacman_mirrors:start"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mkdocs = "^1.5.3"
flake8 = "^6.1.0"
lint = "^1.2.1"
pandoc = "^2.3"
babel = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
